# HexLogic

./: CHANGELOG.md  LICENSE  README.md  __init__.py  example.py  hexlogic.py  hexlogic_unittest.py  pypi-AgEIcHlwaS5vcmcCJDI4NzEyOTFlLTg3ZTgtNDc4NS1hYjdmLTY2ZWFiY2Q0OGViNQACKlszLCIzMmIyNmFiYy00MmQ0LTQxNGItODA5OC02YzIyZGFiZDZlY2MiXQAABiBZQjryCzoeJsWzS85-TNNjLMMBp5fGlSX2ypO1jqg47w  pyproject.toml  setup.py
src/: hexlogic.py
src/hexlogic/: hexlogic.py
tests/: __init__.py  hexlogic_unittest.py
